--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
     <body>
         <div id="app"></div>
     </body>
+    <script src="/dist/app.js"></script>
     <script>
+        // express 本地调试用
+
         // if ('serviceWorker' in navigator){
         //     window.addEventListener('load', () => {
         //         navigator.serviceWorker
