--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="root"></div>
+    <script src="/dist/app.js"></script>
 </body>
 </html>
