--- a/src/index.html
+++ b/src/index.html
@@ -28,32 +28,32 @@
         //     });
         // }
 
-        (function(base, min, max, scaling){ 
-            var cacheWidth = 0; 
-            var timer; 
-            var docEl = document.documentElement; 
-            var resizeEvt = 'onorientationchange' in window ? 'orientationchange' : 'resize'; 
-            var recalc = function(){ 
-                var clientWidth = docEl.clientWidth; 
-                if (!clientWidth) return clientWidth = Math.min(clientWidth, max); 
-                clientWidth = Math.max(clientWidth, min); 
-                if (cacheWidth !== clientWidth){ 
-                    clearInterval(timer); 
-                    cacheWidth = clientWidth; 
-                    docEl.style.fontSize = scaling * (clientWidth / base) + 'px'; 
-                } 
-            }; 
-            recalc(); 
-            setTimeout(recalc, 300); 
-            if (!document.addEventListener) 
+        // (function(base, min, max, scaling){ 
+        //     var cacheWidth = 0; 
+        //     var timer; 
+        //     var docEl = document.documentElement; 
+        //     var resizeEvt = 'onorientationchange' in window ? 'orientationchange' : 'resize'; 
+        //     var recalc = function(){ 
+        //         var clientWidth = docEl.clientWidth; 
+        //         if (!clientWidth) return clientWidth = Math.min(clientWidth, max); 
+        //         clientWidth = Math.max(clientWidth, min); 
+        //         if (cacheWidth !== clientWidth){ 
+        //             clearInterval(timer); 
+        //             cacheWidth = clientWidth; 
+        //             docEl.style.fontSize = scaling * (clientWidth / base) + 'px'; 
+        //         } 
+        //     }; 
+        //     recalc(); 
+        //     setTimeout(recalc, 300); 
+        //     if (!document.addEventListener) 
 
-            window.addEventListener('onorientationchange', ()=>{
-                console.log(screen.orientation);
-                recalc(); 
-            }, true);
-            window.addEventListener(resizeEvt, function(){ 
-                timer = setInterval(recalc, 10); 
-            }); 
-        })(375, 300, 414, 100);
+        //     window.addEventListener('onorientationchange', ()=>{
+        //         console.log(screen.orientation);
+        //         recalc(); 
+        //     }, true);
+        //     window.addEventListener(resizeEvt, function(){ 
+        //         timer = setInterval(recalc, 10); 
+        //     }); 
+        // })(375, 300, 414, 100);
     </script>
 </html>
